# EcoChain

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
application/: __init__.py
application/agents/: __init__.py  extractor.py  orchestrator.py  recommender.py  validator.py
application/calculators/: __init__.py  carbon_calculator.py
application/use_cases/: __init__.py  process_document.py
data/mock/: delivery_note_002.json  delivery_note_004.json  delivery_note_006.json  delivery_note_008.json  delivery_note_010.json  invoice_001.json  invoice_003.json  invoice_005.json  invoice_007.json  invoice_009.json
data/pdfs/: delivery_note_eco_002.json  delivery_note_eco_004.json  invoice_eco_001.json  invoice_eco_003.json  invoice_eco_005.json
docs/: architecture.drawio
domain/: __init__.py  constants.py  models.py
infrastructure/: __init__.py
infrastructure/llm/: __init__.py  gemini_client.py
infrastructure/logging/: __init__.py  event_logger.py
infrastructure/mock_data/: generator.py
interfaces/: __init__.py
interfaces/api/: __init__.py  dependencies.py  main.py
interfaces/api/routers/: __init__.py  documents.py  events.py
interfaces/frontend/: __init__.py  app.py
interfaces/web/: README.md  package-lock.json  package.json
interfaces/web/public/test-documents/: README.md
interfaces/web/src/app/: globals.css  layout.tsx  page.tsx
interfaces/web/src/components/: theme-init.tsx
interfaces/web/src/data/: mock-documents.ts
interfaces/web/src/lib/: api.ts  (+2 more)
scripts/: generate_pdfs.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_carbon_calculator.py  test_models.py
(+9 files in other folders)
